--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cron": "^3.1.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "https-localhost": "^4.7.1",
+    "instagram-private-api": "^1.45.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "nodemailer": "^6.9.10",
