--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.0.3",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
     "crypto": "^1.0.1",
@@ -24,18 +25,22 @@
     "express-session": "^1.18.0",
     "https-localhost": "^4.7.1",
     "instagram-private-api": "^1.45.3",
+    "install": "^0.13.0",
     "js": "^0.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.10",
     "nodemon": "^3.0.3",
+    "npm": "^10.5.0",
     "passport": "^0.7.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.19",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
